--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ENV_ADD_LANGS=pt_br
 ENV_ADMIN_EMAIL_ADDRESS=root@localhost
 ENV_SMTP_SERVER_HOST_NAME=localhost
 ENV_SKIN=iot18
-ENV_ENABLE_DEMO_DATA=no
+ENV_ENABLE_DEMO_DATA=yes
 ENV_MAXDB_SERVICE_PORT=50005
 ENV_MAXDB_SERVICE_HOST=maxdb
 ENV_ORACLE_DB_INSTANCE=XEPDB1
