new liberty version

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ ENV_GEN_MAXIMO_PROPERTIES=yes
 ENV_DB_ALIAS=MAXDB76
 ENV_DB_BACKUP_DIR=/backup
 ENV_BASE_LANG=en
-ENV_ADD_LANGS=pt_br
+ENV_ADD_LANGS=pt_BR
 #ENV_ADD_LANGS=de,fr,ja
 ENV_ADMIN_EMAIL_ADDRESS=root@localhost
 ENV_SMTP_SERVER_HOST_NAME=localhost
