--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -23,8 +23,7 @@ ARG mam_fp_image=MAMMTFP761${mam_fp}IMRepo.zip
 ENV DB2_IMAGE=DB2_AWSE_REST_Svr_${db_ver}_Lnx_86-64.tar.gz
 ENV DB2_FP_IMAGE=v${db_ver}.${db_fp}_linuxx64_server_t.tar.gz
 
-COPY check.sh /
-COPY packages.list /
+COPY check.sh packages.list /
 COPY *.zip *.jar *.gz /images/
 
 # Copy backup files
