--- a/db2/Dockerfile
+++ b/db2/Dockerfile
@@ -15,31 +15,31 @@ FROM ${namespace}/db2images:${buildver}
 
 FROM ubuntu:18.04
 
-LABEL maintainer="nishi2go@gmail.com"
+LABEL org.opencontainers.image.authors="nishi2go@gmail.com,ebasso@ebasso.net"
 
 ARG backup_dir=/backup
 ARG db_alias=MAXDB76
 ARG db_port=50005
 
-ENV DB2_PATH /home/ctginst1/sqllib
-ENV MAXDB ${db_alias}
-ENV MAXDB_SERVICE_PORT ${db_port}
-ENV BACKUP_DIR ${backup_dir}
-ENV DATA_DIR /home/ctginst1/ctginst1
-ENV INIT_DATA_DIR /home/ctginst1/init-data
+ENV DB2_PATH /home/ctginst1/sqllib  \
+    MAXDB ${db_alias}. \
+    MAXDB_SERVICE_PORT ${db_port}. \
+    BACKUP_DIR ${backup_dir}. \
+    DATA_DIR /home/ctginst1/ctginst1. \
+    INIT_DATA_DIR /home/ctginst1/init-data
 
 ## Install required software
-RUN dpkg --add-architecture i386
-RUN apt-get update -y && apt-get install -y sudo netcat file libxml2 \
-  libx32stdc++6 libpam0g:i386 binutils libaio1 libnuma1 \
+RUN dpkg --add-architecture i386 \
+  && apt-get update -y \
+  && apt-get install -y sudo netcat file libxml2 libx32stdc++6 libpam0g:i386 binutils libaio1 libnuma1 \
   && rm -rf /var/lib/apt/lists/*
 
 # Install IBM DB2
-RUN groupadd ctggrp1
-RUN groupadd maximo
-RUN useradd -g ctggrp1 -m -d /home/ctginst1 ctginst1
-RUN useradd -g maximo -m -d /home/maximo maximo
-RUN echo "ctginst1    ALL=(root) NOPASSWD: /usr/sbin/chpasswd, $DB2_PATH/instance/db2rfe " >> /etc/sudoers.d/ctginst1
+RUN groupadd ctggrp1 \
+  &&  groupadd maximo \
+  && useradd -g ctggrp1 -m -d /home/ctginst1 ctginst1 \
+  && useradd -g maximo -m -d /home/maximo maximo \
+  && echo "ctginst1    ALL=(root) NOPASSWD: /usr/sbin/chpasswd, $DB2_PATH/instance/db2rfe " >> /etc/sudoers.d/ctginst1 
 
 RUN mkdir -p ${BACKUP_DIR} && chown ctginst1.ctggrp1 ${BACKUP_DIR} && chmod 774 ${BACKUP_DIR}
 COPY --from=0 --chown=ctginst1:ctggrp1 /backup/* ${BACKUP_DIR}/
