--- a/db2/Dockerfile
+++ b/db2/Dockerfile
@@ -21,12 +21,12 @@ ARG backup_dir=/backup
 ARG db_alias=MAXDB76
 ARG db_port=50005
 
-ENV DB2_PATH /home/ctginst1/sqllib  \
-    MAXDB ${db_alias}. \
-    MAXDB_SERVICE_PORT ${db_port}. \
-    BACKUP_DIR ${backup_dir}. \
-    DATA_DIR /home/ctginst1/ctginst1. \
-    INIT_DATA_DIR /home/ctginst1/init-data
+ENV DB2_PATH=/home/ctginst1/sqllib   \
+    MAXDB=${db_alias}                \
+    MAXDB_SERVICE_PORT=${db_port}    \
+    BACKUP_DIR=${backup_dir}         \
+    DATA_DIR=/home/ctginst1/ctginst1 \
+    INIT_DATA_DIR=/home/ctginst1/init-data
 
 ## Install required software
 RUN dpkg --add-architecture i386 \
@@ -36,7 +36,7 @@ RUN dpkg --add-architecture i386 \
 
 # Install IBM DB2
 RUN groupadd ctggrp1 \
-  &&  groupadd maximo \
+  && groupadd maximo \
   && useradd -g ctggrp1 -m -d /home/ctginst1 ctginst1 \
   && useradd -g maximo -m -d /home/maximo maximo \
   && echo "ctginst1    ALL=(root) NOPASSWD: /usr/sbin/chpasswd, $DB2_PATH/instance/db2rfe " >> /etc/sudoers.d/ctginst1 
@@ -47,23 +47,25 @@ COPY --from=0 --chown=ctginst1:ctggrp1 /backup/* ${BACKUP_DIR}/
 RUN mkdir -p /work/db2 && chown ctginst1.ctggrp1 /work/db2
 COPY --chown=ctginst1:ctggrp1 *.sh /work/db2/
 RUN chmod -R 700 /work/db2 && chmod +x /work/db2/*.sh
+
 USER ctginst1
-WORKDIR /tmp
-RUN mkdir /tmp/db2 && mkdir /tmp/db2fp && chown ctginst1:ctggrp1 /tmp/db2*
+#WORKDIR /tmp
+#RUN mkdir /tmp/db2 && mkdir /tmp/db2fp && chown ctginst1:ctggrp1 /tmp/db2*
 COPY --chown=ctginst1:ctggrp1 db2awse.rsp /tmp/
 COPY --from=0 --chown=ctginst1:ctggrp1 /db2 /tmp/db2
 COPY --from=0 --chown=ctginst1:ctggrp1 /db2fp /tmp/db2fp
-RUN ./db2/server_awse_o/db2setup -r db2awse.rsp -f nobackup \
-  && ${DB2_PATH}/adm/db2licm -a ./db2/server_awse_o/db2/license/db2awse_o.lic \
+
+RUN /tmp/db2/server_awse_o/db2setup -r db2awse.rsp -f nobackup \
+  && ${DB2_PATH}/adm/db2licm -a /tmp/db2/server_awse_o/db2/license/db2awse_o.lic \
   && ${DB2_PATH}/adm/db2licm -l \
   && . ~/sqllib/db2profile && db2stop \
-  && cd ./db2fp/server_t \
-  && ./installFixPack -n -f update -f nobackup -f db2lib \
+  && cd /tmp/db2fp/server_t \
+  && /tmp/db2fp/server_t/installFixPack -n -f update -f nobackup -f db2lib \
   && cd ../.. \
-  && rm -rf db2* \ 
   && /work/db2/installdb2.sh \
   && mkdir /home/ctginst1/init-data \
-  && cp -rp /home/ctginst1/ctginst1/* /home/ctginst1/init-data/
+  && cp -rp /home/ctginst1/ctginst1/* /home/ctginst1/init-data/ \
+  && rm -rf /tmp/db2* 
 
 WORKDIR /work
 ENTRYPOINT ["/work/db2/startdb2.sh"]
